Added Tracked War Endpoint
